--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2",
     "vite-plugin-pwa": "^1.0.3",
     "workbox-window": "^7.3.0",
