feat: Add Post-Exilic Period rulers with Biblical Figures column
- Added new Post-Exilic Period menu item and grid component
- Implemented comprehensive rulers data from Babylonian to Roman periods
- Added Biblical Figures column showing key biblical personalities for each ruler's reign
- Includes figures like Daniel, Ezra, Nehemiah, Esther, Mordecai, etc.
- Full bilingual support (English/Telugu) for all data
- Added vertical bar chart visualization with empire-based color coding
- Chart shows individual rulers as bars with empire-specific colors
- Interactive tooltips on hover showing ruler details
- Fixed Telugu legend translations and bar color mapping
- Updated routing and menu configuration for new section

--- a/src/assets/data/menuConfig.json
+++ b/src/assets/data/menuConfig.json
@@ -30,7 +30,8 @@
     ],
     "kings": [
   { "key": "judah-kings", "icon": "FaCrown", "iconColor": "#6366f1", "label": { "en": "Judah Kings", "te": "యూదా రాజులు" } },
-  { "key": "israel-kings", "icon": "GiCrownCoin", "iconColor": "#f59e42", "label": { "en": "Israel Kings", "te": "ఇస్రాయేల్ రాజులు" } }
+  { "key": "israel-kings", "icon": "GiCrownCoin", "iconColor": "#f59e42", "label": { "en": "Israel Kings", "te": "ఇస్రాయేల్ రాజులు" } },
+  { "key": "post-exilic-period", "icon": "FaCrown", "iconColor": "#8b5cf6", "label": { "en": "The Post-Exilic Period", "te": "యూదుల చెర తరువాత కాలం" } }
     ],
     "judges": [
       { "key": "list-of-judges", "icon": "glyphicon-user", "label": { "en": "List of Judges", "te": "న్యాయాధిపతుల జాబితా" } }
