feat: Implement comprehensive Telugu language support and cross-language search - Fix Telugu text display in D3Chart (Family Tree visualization) - Add Telugu language support to FamilyTreeGrid components - Implement cross-language search functionality - Add Telugu translations for all UI elements - Add right padding for all grids - Add missing icons for Family Tree Grid menu item

--- a/src/assets/data/menuConfig.json
+++ b/src/assets/data/menuConfig.json
@@ -19,6 +19,7 @@
     ],
     "genealogy": [
       { "key": "adam-to-jesus", "icon": "FaBible", "label": { "en": "Family Tree", "te": "కుటుంబ వృక్షాలు" } },
+      { "key": "family-tree-grid", "icon": "FaTable", "label": { "en": "Family Tree Grid", "te": "కుటుంబ వృక్ష గ్రిడ్" } },
       
       { "key": "adam-to-noah", "icon": "FaBible", "label": { "en": "Adam to Noah", "te": "ఆదాం నుండి నోవహు" } },
       { "key": "noah-to-abraham", "icon": "FaUserFriends", "label": { "en": "Noah to Abraham", "te": "నోవహు  నుండి అబ్రాహాము" } },
