--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "ag-grid-community": "^34.1.2",
+    "ag-grid-react": "^34.1.2",
     "d3": "^7.9.0",
     "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
