--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "recharts": "^3.1.2",
     "vite-plugin-pwa": "^1.0.3",
     "workbox-window": "^7.3.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@capacitor/android": "^7.4.3",
