--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ag-grid-react": "^34.1.2",
     "d3": "^7.9.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-d3-tree": "^3.6.6",
@@ -27,9 +29,7 @@
     "recharts": "^3.1.2",
     "vite-plugin-pwa": "^1.0.3",
     "workbox-window": "^7.3.0",
-    "xlsx": "^0.18.5",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@capacitor/android": "^7.4.3",
@@ -44,6 +44,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.7"
   }
 }
