--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,12 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/favicon.png",
+  "src": "favicon.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/favicon.png",
+  "src": "favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
