--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,22 +10,22 @@
   "start_url": "/The-Wisdom-Mountain/",
   "icons": [
     {
-      "src": "favicon.png",
+  "src": "/The-Wisdom-Mountain/favicon.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "favicon.png",
+  "src": "/The-Wisdom-Mountain/favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicon.png",
+  "src": "/The-Wisdom-Mountain/favicon.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "favicon.png",
+  "src": "/The-Wisdom-Mountain/favicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
